<resources>
    <string name="app_name">Nvoy Customer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="select_receiver">Select Receiving Customer</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="contact_courier">CALL COURIER</string>
    <string name="cancel_contact_courier">LATER</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email Address</string>
    <string name="national_id">NIC</string>
    <string name="user_exist">User Already Exists!</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search</string>

</resources>
